unpackaged/main/default/objects/Product_Option_History__c/Product_Option_History__c.object-meta.xml
<CustomObject>
    <label>Product Option History</label>
    <nameField>
        <displayFormat>POHN-{000000000}</displayFormat>
        <label>Product Option History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Option Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>