unpackaged/main/default/objects/Product_Option_History__c/fields/New_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Value__c</fullName>
    <label>New Value</label>
    <type>TextArea</type>
</CustomField>