unpackaged/main/default/objects/Product_Option_History__c/fields/Original_Value__c.field-meta.xml
<CustomField>
    <fullName>Original_Value__c</fullName>
    <label>Original Value</label>
    <type>TextArea</type>
</CustomField>