unpackaged/main/default/objects/Product_Option_History__c/fields/Product_Option__c.field-meta.xml
<CustomField>
    <fullName>Product_Option__c</fullName>
    <label>Product Option</label>
    <referenceTo>SBQQ__ProductOption__c</referenceTo>
    <relationshipLabel>Product Option Histories</relationshipLabel>
    <relationshipName>Product_Option_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>