unpackaged/main/default/objects/Product_Option_History__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Option_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>